--- a/html/controls/media_map.css
+++ b/html/controls/media_map.css
@@ -1,13 +1,15 @@
 
-#FlexboxWarning { text-align: center; }
-#FlexboxWarning:not(.NoFlexbox) { display: none; }
+div.FlexboxRow,div.FlexboxCol { display: -webkit-flex; display: flex; }
+div.FlexboxRow { -webkit-flex-direction: row; flex-direction: row; }
+div.FlexboxCol { -webkit-flex-direction: column; flex-direction: column; }
+div.FlexboxStretch { -webkit-align-items: stretch; align-items: stretch; }
+div.FlexboxCenter {
+  -webkit-align-items: center; align-items: center;
+  -webkit-justify-content: space-around; justify-content: space-around;
+}
 
 #mainDiv {
   position: absolute;
-  display: -webkit-flex; display: flex;
-  -webkit-flex-direction: row; flex-direction: row;
-  -webkit-justify-content: space-around; justify-content: space-around;
-  -webkit-align-items: stretch; align-items: stretch;
   top: 0%; left: 0%;
   width: 100%; height: 100%;
 }
@@ -17,9 +19,6 @@
   -webkit-flex: 1; flex: 1;
   margin: 2% 1% 2% 2%;
   text-align: center;
-  display: -webkit-flex; display: flex;
-  -webkit-flex-direction: column; flex-direction: column;
-  -webkit-align-items: stretch; align-items: stretch;
 }
 #controls.NoFlexbox { width: 30%; height: 100%; float: left; }
 
@@ -33,30 +32,21 @@
 #controls div.SearchBox input.Search { width: 100%; }
 #controls div.LeagueName a.LeagueName { font-weight: bold; font-size: 125%; }
 #controls div.Template { display: none; }
-#controls div.Image div.ImageBox {
-  display: -webkit-flex; display: flex;
-  -webkit-justify-content: center; justify-content: center;
-  -webkit-align-items: center; align-items: center;
-}
 #controls div.Image div.ImageBox:nth-of-type(2n) { background: #ccc; }
 #controls div.Image div.ImageBox:nth-of-type(2n+1) { background: #ddd; }
-#controls div.Image div.ImageBox.Template { display: none; }
 #controls div.Image div.ImageBox div.TeamLogoImage {
   -webkit-order: 1; order: 1;
   -webkit-flex: 1; flex: 1;
 }
-#controls.NoFlexbox div.Image div.ImageBox div.TeamLogoImage { width: 50%; float: left; }
+#controls.NoFlexbox div.Image div.ImageBox div.TeamLogoImage { width: 45%; display: inline-block; }
 #controls div.Image div.ImageBox div.TeamLogoImage img.TeamLogo { width: 100%; }
 #controls div.Image div.ImageBox div.ImageControl {
   -webkit-order: 2; order: 2;
   -webkit-flex: 1; flex: 1;
   text-align: center;
-  display: -webkit-flex; display: flex;
-  -webkit-flex-direction: column; flex-direction: column;
-  -webkit-justify-content: space-around; justify-content: space-around;
-  -webkit-align-items: center; align-items: center;
 }
-#controls.NoFlexbox div.Image div.ImageBox div.ImageControl { width: 50%; }
+#controls.NoFlexbox div.Image div.ImageBox div.ImageControl { width: 45%; display: inline-block; }
+
 
 #mapCanvas {
   -webkit-order: 2; order: 2;
