Update mobile page JamControlPage to use class referencing instead of direct element ids, use full jquery-mobile grid layout instead of table, consolidate/compact js

--- a/html/controls/mobile.css
+++ b/html/controls/mobile.css
@@ -16,15 +16,15 @@
 
 
 /* JamControlPage */
+  #JamControlPage div { text-align: center; }
   #JamControlPage p.Clocks { text-align: center; }
   #JamControlPage p.Clocks>span { padding: 0.5em 0.5em; margin: auto 0.5em; }
-  #JamControlPage table { width: 100% }
-  #JamControlPage td {width: 50%; }
-  #period { font-size: 150%; width: 95%; text-align: center}
-  #periodno {font-size: 200% }
-  #periodtime { font-size: 500%; text-align: center }
-  /* The three divs to display the times */
-  #jamdiv,#lineupdiv,#timeoutdiv { width: 100%; text-align: center; position: absolute}
+  #JamControlPage div.Period div.PeriodNumber { width: 35%; }
+  #JamControlPage div.Period div.PeriodTime { width: 65%; }
+  #JamControlPage div.Period div.Title { font-size: 150%; }
+  #JamControlPage div.Period div.Number { font-size: 200% }
+  #JamControlPage div.Period div.PeriodTime { font-size: 500%; }
+  #JamControlPage div.Time a.Time { font-size: 150%; }
 /* END JamControlPage */
 
 /* PeriodTimePage */
@@ -44,4 +44,4 @@
   .PenaltyTime { font-size: 300%; }
   #Jammer1Time,#Blocker1Team1Time,#Blocker2Team1Time,#Blocker3Team1Time { margin-left: .5em; }
   #Jammer2Time,#Blocker1Team2Time,#Blocker2Team2Time,#Blocker3Team2Time { float: right; margin-right: .5em; }
-  
+
