--- a/html/controls/operator.css
+++ b/html/controls/operator.css
@@ -54,6 +54,7 @@ table.RowTable { border-spacing: 0px; }
   #TeamTime table.Team tr.Score td.Score a { font-size: 300%; }
   #TeamTime table.Team tr.Score td.Score a.Change { font-size: 200%; line-height: 175%; }
   #TeamTime table.Team tr.Timeout td.Timeouts a { font-size: 200%; }
+  #TeamTime table.Team tr.Timeout td.OfficialReviews a { font-size: 200%; }
   #TeamTime table.Team tr.Jammer td.Jammer:not(.ByName) select.Jammer.ByName { display: none; }
   #TeamTime table.Team tr.Jammer td.Jammer:not(.ByNumber) select.Jammer.ByNumber { display: none; }
   #TeamTime table.Team tr.Jammer td.Jammer:not(.AlphaSort) select.Jammer.AlphaSort { display: none; }
