--- a/html/views/overlay.html
+++ b/html/views/overlay.html
@@ -20,36 +20,38 @@
 <div id="mainDiv">
 
   <div id="TopBar">
-    <div id="ClockPeriodNumber" >
-      <a><span class="Name">P</span><span class="Number"></span></a>
+     <div id="ClockPeriodNumber">
+      <a class="circle noBorder"><span class="Name">P</span><span class="Number"></span></a>
     </div>
-    <div id="ClockPeriodTime" >
-      <a class="ClockPI" ></a>
-    </div>
-
-    <div id="ClockIntermissionTime" >
-      <a class="ClockPI" ></a>
+    <div id="ClockPeriodTime">
+      <a class="ClockPI circle noBorder" ></a>
     </div>
 
-    <div id="ClockJamTime" >
-      <a class="ClockJLT"></a>
+    <div id="ClockIntermissionTime">
+      <a class="ClockPI circle noBorder" ></a>
     </div>
-    <div id="ClockLineupTime" >
-      <a class="ClockJLT"></a>
+
+    <div id="ClockJamTime">
+      <a class="ClockJLT circle noBorder"></a>
     </div>
-    <div id="ClockTimeoutTime" >
-      <a class="ClockJLT"></a>
+    <div id="ClockLineupTime">
+      <a class="ClockJLT circle noBorder"></a>
     </div>
+    <div id="ClockTimeoutTime">
+      <a class="ClockJLT circle noBorder"></a>
+    </div> 
   </div>
 
   <div id="BottomBar">
-    <div id="Team1Name" ><a></a></div>
-    <div id="Team1Score" ><a></a></div>
-    <div id="Team2Name" ><a></a></div>
-    <div id="Team2Score" ><a></a></div>
+    <div id="Team1TimeOuts" class="circle redBorder"><a></a></div>
+    <div id="Team1Name" class="circle noBorder" ><a></a></div>
+    <div id="Team1Score" class="circle noBorder" ><a></a></div>
+    <div id="Team2Name" class="circle noBorder" ><a></a></div>
+    <div id="Team2Score" class="circle noBorder" ><a></a></div>
+    <div id="Team2TimeOuts" class="circle redBorder"><a></a></div>
   </div>
 
-  <img id="Overlay" src="/images/fullscreen/overlay.png" />
+ <img id="Overlay" src="/images/fullscreen/overlay.png" /> 
 </div>
 </body>
 
