Finish CSSing top, remove background. Also added Jam Number

--- a/html/views/overlay.html
+++ b/html/views/overlay.html
@@ -38,6 +38,9 @@
     <div id="ClockTimeoutTime">
       <a class="ClockJLT circle noBorder"></a>
     </div> 
+    <div id="ClockJamNumber">
+      <a class="ClockJN circle noBorder"><span class="Name">J</span><span class="Number"></span></a>
+    </div>
   </div>
 
   <div id="BottomBar">
@@ -49,7 +52,7 @@
     <div id="Team2TimeOuts" class="circle redBorder"><a></a></div>   
   </div>
 
- <img id="Overlay" src="/images/fullscreen/overlay.png" /> 
+<!-- <img id="Overlay" src="/images/fullscreen/overlay.png" /> --> 
 </div>
 </body>
 
