--- a/html/views/overlay.css
+++ b/html/views/overlay.css
@@ -22,33 +22,34 @@ a {
   display: block;
 }
 
-#TopBar { left: 17%; right: 28%; top: 6%; bottom: 86%; text-align: center; }
+#TopBar { left: 10%; right: 10%; top: 6%; bottom: 86%; text-align: center; }
 
-#ClockPeriodNumber { top: 0%; height: 100%; left: 18%; right: 61%; }
-#ClockPeriodTime { top: 0%; height: 100%; left: 40%; right: 29%; }
+#ClockPeriodNumber { top: 0%; height: 100%; left: 12%; right: 75%; }
+#ClockPeriodTime { top: 0%; height: 100%; left: 26%; right: 50%; }
 #ClockPeriodTime>a:not(.ShowPeriod) { display: none; }
 
-#ClockIntermissionTime { top: 0%; height: 100%; left: 72%; right: 1%; }
+#ClockIntermissionTime { top: 0%; height: 100%; left: 52%; right: 24%; }
 #ClockIntermissionTime>a:not(.ShowIntermission) { display: none; }
 
-#ClockJamTime { top: 0%; height: 100%; left: 72%; right: 1%; }
+#ClockJamTime { top: 0%; height: 100%; left: 52%; right: 24%; }
 #ClockJamTime>a:not(.ShowJam) { display: none; }
 
-#ClockLineupTime { top: 0%; height: 100%; left: 72%; right: 1%; }
+#ClockLineupTime { top: 0%; height: 100%; left: 52%; right: 24%; }
 #ClockLineupTime>a:not(.ShowLineup) { display: none; }
 
-#ClockTimeoutTime { top: 0%; height: 100%; left: 72%; right: 1%; }
+#ClockTimeoutTime { top: 0%; height: 100%; left: 52%; right: 24%; }
 #ClockTimeoutTime>a:not(.ShowTimeout) { display: none; }
 
+#ClockJamNumber { top: 0%; height: 100%; left: 77%; right: 10%; }
 
 
 #BottomBar { left: 11.5%; right: 12%; top: 85.5%; bottom: 6.5%; text-align: center; }
 
 #Team1TimeOuts { top: 0%; height: 100%; left: 0%; right: 99%; }
-#Team1Name { top: 0%; height: 100%; left: 13%; right: 67%; }
-#Team1Score { top: 0%; height: 100%; left: 34%; right: 51%; }
-#Team2Name { top: 0%; height: 100%; left: 51%; right: 29%; }
-#Team2Score { top: 0%; height: 100%; left: 72%; right: 13%; }
+#Team1Name { top: 20%; height: 100%; left: 13%; right: 67%; }
+#Team1Score { top: 20%; height: 100%; left: 34%; right: 51%; }
+#Team2Name { top: 20%; height: 100%; left: 51%; right: 29%; }
+#Team2Score { top: 20%; height: 100%; left: 72%; right: 13%; }
 #Team2TimeOuts { top: 0%; height: 100%; left: 88%; right: 2%; }
 
 #Overlay { width: 100%; height: 100%; z-index: -1; }
