--- a/html/views/overlay.html
+++ b/html/views/overlay.html
@@ -43,16 +43,20 @@
     </div>
   </div>
 
+  <div id="BottomBarFullWidth">
+    <div id="Team1Logo" class="logos"><img></img></div>
+    <div id="Team2Logo" class="logos"><img></img></div>   
+  </div>
+ 
   <div id="BottomBar">
     <div id="Team1TimeOuts" class="circle redBorder"><a></a></div>
     <div id="Team1Name" class="circle noBorder" ><a></a></div>
     <div id="Team1Score" class="circle noBorder" ><a></a></div>
     <div id="Team2Name" class="circle noBorder" ><a></a></div>
     <div id="Team2Score" class="circle noBorder" ><a></a></div>
-    <div id="Team2TimeOuts" class="circle redBorder"><a></a></div>   
+    <div id="Team2TimeOuts" class="circle redBorder"><a></a></div>
   </div>
 
-<!-- <img id="Overlay" src="/images/fullscreen/overlay.png" /> --> 
 </div>
 </body>
 
