--- a/html/views/overlay.css
+++ b/html/views/overlay.css
@@ -22,7 +22,9 @@ a {
   display: block;
 }
 
-#TopBar { left: 10%; right: 10%; top: 6%; bottom: 86%; text-align: center; }
+#StatusBar { left: 25%; right: 25%; top: 11%; text-align: center; }
+#StatusBar>a { height: 15%; width: 100%; font-size: 7%}
+#TopBar { left: 10%; right: 10%; top: 1%; bottom: 91%; text-align: center; }
 
 #ClockPeriodNumber { top: 0%; height: 100%; left: 12%; right: 75%; }
 #ClockPeriodTime { top: 0%; height: 100%; left: 26%; right: 50%; }
