--- a/html/views/overlay.html
+++ b/html/views/overlay.html
@@ -19,6 +19,9 @@
 <body>
 <div id="mainDiv">
 
+  <div id="StatusBar">
+  	<a class="circle noBorder">&nbsp;</a>
+  </div>
   <div id="TopBar">
     <div id="ClockPeriodNumber">
       <a class="circle noBorder"><span class="Name">P</span><span class="Number"></span></a>
@@ -49,12 +52,12 @@
   </div>
  
   <div id="BottomBar">
-    <div id="Team1TimeOuts" class="circle redBorder"><a></a></div>
+    <div id="Team1TimeOuts" class="TimeOuts circle redBorder"><a></a></div>
     <div id="Team1Name" class="circle noBorder" ><a></a></div>
     <div id="Team1Score" class="circle noBorder" ><a></a></div>
     <div id="Team2Name" class="circle noBorder" ><a></a></div>
     <div id="Team2Score" class="circle noBorder" ><a></a></div>
-    <div id="Team2TimeOuts" class="circle redBorder"><a></a></div>
+    <div id="Team2TimeOuts" class="TimeOuts circle redBorder"><a></a></div>
   </div>
 
 </div>
