--- a/html/views/overlay.css
+++ b/html/views/overlay.css
@@ -52,6 +52,10 @@ a {
 #Team2Name { top: 20%; height: 100%; left: 51%; right: 29%; }
 #Team2Score { top: 20%; height: 100%; left: 72%; right: 13%; }
 #Team2TimeOuts { top: 0%; height: 100%; left: 88%; right: 2%; }
+#Team1Name.AlternateName a.Name { display: none; }
+#Team1Name:not(.AlternateName) a.AlternateName { display: none; }
+#Team2Name.AlternateName a.Name { display: none; }
+#Team2Name:not(.AlternateName) a.AlternateName { display: none; }
 
 #BottomBarFullWidth { top: 85.5%; bottom: 0; width: 100%; }
 #Team1Logo,#Team2Logo { bottom: 0; height: 100%; }
