--- a/html/views/overlay.html
+++ b/html/views/overlay.html
@@ -20,7 +20,7 @@
 <div id="mainDiv">
 
   <div id="StatusBar">
-  	<a class="circle noBorder">&nbsp;</a>
+    <a class="circle noBorder"></a>
   </div>
   <div id="TopBar">
     <div id="ClockPeriodNumber">
@@ -53,9 +53,9 @@
  
   <div id="BottomBar">
     <div id="Team1TimeOuts" class="TimeOuts circle redBorder"><a></a></div>
-    <div id="Team1Name" class="circle noBorder" ><a class="Name"</a><a class="AlternateName"></a></div>
+    <div id="Team1Name" class="circle noBorder" ><a class="Name"></a><a class="AlternateName"></a></div>
     <div id="Team1Score" class="circle noBorder" ><a></a></div>
-    <div id="Team2Name" class="circle noBorder" ><a class="Name"</a><a class="AlternateName"></a></div>
+    <div id="Team2Name" class="circle noBorder" ><a class="Name"></a><a class="AlternateName"></a></div>
     <div id="Team2Score" class="circle noBorder" ><a></a></div>
     <div id="Team2TimeOuts" class="TimeOuts circle redBorder"><a></a></div>
   </div>
