--- a/html/views/overlay.html
+++ b/html/views/overlay.html
@@ -19,30 +19,28 @@
 <body>
 <div id="mainDiv">
 
-  <div id="StatusBar">
-    <a class="circle noBorder"></a>
-  </div>
+  <div id="StatusBar" class="circle noBorder"><a></a></div>
   <div id="TopBar">
-    <div id="ClockPeriodNumber">
-      <a class="circle noBorder"><span class="Name">P</span><span class="Number"></span></a>
+    <div id="ClockPeriodNumber" class="circle noBorder">
+      <a><span class="Name">P</span><span class="Number"></span></a>
     </div>
-    <div id="ClockPeriodTime">
-      <a class="ClockPI circle noBorder" ></a>
+    <div id="ClockPeriodTime" class="circle noBorder">
+      <a class="ClockPI"></a>
     </div>
-    <div id="ClockIntermissionTime">
-      <a class="ClockPI circle noBorder" ></a>
+    <div id="ClockIntermissionTime" class="circle noBorder">
+      <a class="ClockPI"></a>
     </div>
-    <div id="ClockJamTime">
-      <a class="ClockJLT circle noBorder"></a>
+    <div id="ClockJamTime" class="circle noBorder">
+      <a class="ClockJLT"></a>
     </div>
-    <div id="ClockLineupTime">
-      <a class="ClockJLT circle noBorder"></a>
+    <div id="ClockLineupTime" class="circle noBorder">
+      <a class="ClockJLT"></a>
     </div>
-    <div id="ClockTimeoutTime">
-      <a class="ClockJLT circle noBorder"></a>
+    <div id="ClockTimeoutTime" class="circle noBorder">
+      <a class="ClockJLT"></a>
     </div> 
-    <div id="ClockJamNumber">
-      <a class="ClockJN circle noBorder"><span class="Name">J</span><span class="Number"></span></a>
+    <div id="ClockJamNumber" class="circle noBorder">
+      <a class="ClockJN"><span class="Name">J</span><span class="Number"></span></a>
     </div>
   </div>
 
