Overlay: show/hide clocks correctly at intermission (intermission was over period clock location, now over jam/lineup/timeout location)

--- a/html/views/overlay.html
+++ b/html/views/overlay.html
@@ -25,19 +25,19 @@
       <a><span class="Name">P</span><span class="Number"></span></a>
     </div>
     <div id="ClockPeriodTime" class="circle noBorder">
-      <a class="ClockPI"></a>
+      <a class="ClockP"></a>
     </div>
     <div id="ClockIntermissionTime" class="circle noBorder">
-      <a class="ClockPI"></a>
+      <a class="ClockJLTI"></a>
     </div>
     <div id="ClockJamTime" class="circle noBorder">
-      <a class="ClockJLT"></a>
+      <a class="ClockJLTI"></a>
     </div>
     <div id="ClockLineupTime" class="circle noBorder">
-      <a class="ClockJLT"></a>
+      <a class="ClockJLTI"></a>
     </div>
     <div id="ClockTimeoutTime" class="circle noBorder">
-      <a class="ClockJLT"></a>
+      <a class="ClockJLTI"></a>
     </div> 
     <div id="ClockJamNumber" class="circle noBorder">
       <a class="ClockJN"><span class="Name">J</span><span class="Number"></span></a>
