--- a/html/views/wftdatv.html
+++ b/html/views/wftdatv.html
@@ -16,3 +16,24 @@
 <script type="text/javascript" src="/javascript/scoreboard.js" ></script>
 
 </head>
+<body>
+<div id="mainDiv">
+  <div id="BottomBar">
+    <div id="Team1">
+      <span class="TeamName"><a>BREW</a></span>
+      <span class="TeamScore"><a>175</a></span>
+    </div>
+    <div id="status">
+      <span id="jamNumber"><a>J13</a></span>
+      <span id="time"><a>1:04</a></span>
+      <span id="logo"></span>
+      <span id="period"><a>P1</a></span>
+      <span id="clock"><a>29:45</a></span>
+    </div>
+    <div id="Team2">
+      <span class="TeamScore"><a>175</a></span>
+      <span class="TeamName"><a>CHARM</a></span>
+    </div>
+  </div>
+</div>
+</body>
