--- a/html/views/wftdatv.html
+++ b/html/views/wftdatv.html
@@ -19,7 +19,7 @@
 <body>
 <div id="mainDiv">
   <div id="BottomBar">
-    <div id="Team1">
+    <div id="Team1" class="parallelogramRight">
       <span class="TeamName"><a>BREW</a></span>
       <span class="TeamScore"><a>175</a></span>
     </div>
@@ -30,7 +30,7 @@
       <span id="period"><a>P1</a></span>
       <span id="clock"><a>29:45</a></span>
     </div>
-    <div id="Team2">
+    <div id="Team2" class="parallelogramLeft">
       <span class="TeamScore"><a>175</a></span>
       <span class="TeamName"><a>CHARM</a></span>
     </div>
