--- a/html/views/wftdatv.css
+++ b/html/views/wftdatv.css
@@ -20,19 +20,54 @@ a {
   font-size: 2em;
 }
 
-/* FIXME - Remove this. */
-#mainDiv { width: 99%; height: 99% }
+#mainDiv { width: 100%; height: 100%; }
 
 #BottomBar { left: 5%; right: 5%; top: 85.5%; bottom: 6.5%; text-align: center; }
-#Team1 { top: 0%; height: 100%; left: 0%; right: 80%; }
-#Team2 { top: 0%; height: 100%; left: 80%; right: 0%; }
+#Team1 { top: 0%; height: 100%; left: 0%; right: 70%; z-index: 10 }
+#Team2 { top: 0%; height: 100%; left: 70%; right: 0%; z-index: 10}
 
-#status { top 0%; height 100%; left: 33%; right: 33%; }
 
+  
+#Team1 .TeamName { 
+  left: 5%;  
+  transform: skew(20deg);
+  -o-transform: skew(20deg);
+  -moz-transform: skew(20deg);
+  -webkit-transform: skew(20deg);
+ }
+#Team1 .TeamScore { 
+  left: 70%;
+  transform: skew(20deg);
+  -o-transform: skew(20deg);
+  -moz-transform: skew(20deg);
+  -webkit-transform: skew(20deg); 
+}
+
+#Team2 .TeamName { 
+  left: 35%;  
+  transform: skew(-20deg);
+  -o-transform: skew(-20deg);
+  -moz-transform: skew(-20deg);
+  -webkit-transform: skew(-20deg);
+ }
+#Team2 .TeamScore { 
+  left: 5%;
+  transform: skew(-20deg);
+  -o-transform: skew(-20deg);
+  -moz-transform: skew(-20deg);
+  -webkit-transform: skew(-20deg); 
+}
+
+#middle { top 0%; height: 100%; left: 18%; right: 18%; border-width: 0.4em 0 0.4em 0; border-style: solid; border-color: #d07fae; background: #e7b9d3; z-index: 5; }
+
+#middle-left { top: 0%; height: 100%; left: 5%; right: 60%; background-color: red }
+#middle-right { top: 0%; height: 100%; left: 60%; right: 5%; background-color: red }
+
+#logo { top: 0%; height: 100%; left: 49%; right: 49%; }
 
 .parallelogramLeft{
-     border:2px solid #000;
-     background:pink;
+     border: 0.4em solid #d07fae;
+     background: #e7b9d3;
      transform: skew(20deg);
      -o-transform: skew(20deg);
      -moz-transform: skew(20deg);
@@ -40,8 +75,8 @@ a {
 }
 
 .parallelogramRight{
-     border:2px solid #000;
-     background:pink;
+	 border: 0.4em solid #d07fae;
+     background: #e7b9d3;
      transform: skew(-20deg);
      -o-transform: skew(-20deg);
      -moz-transform: skew(-20deg);
