--- a/html/views/wftdatv.html
+++ b/html/views/wftdatv.html
@@ -20,19 +20,23 @@
 <div id="mainDiv">
   <div id="BottomBar">
     <div id="Team1" class="parallelogramRight">
-      <span class="TeamName"><a>BREW</a></span>
-      <span class="TeamScore"><a>175</a></span>
+      <div class="TeamName" ><a>BREW</a></div>
+      <div class="TeamScore"><a>175</a></div>
     </div>
-    <div id="status">
-      <span id="jamNumber"><a>J13</a></span>
-      <span id="time"><a>1:04</a></span>
-      <span id="logo"></span>
-      <span id="period"><a>P1</a></span>
-      <span id="clock"><a>29:45</a></span>
+    <div id="middle">
+      <div id="middle-left">
+      	<div id="jamNumber"><a>J13</a></div>
+      	<div id="time"><a>1:04</a></div>
+      </div>
+      <div id="logo"><a>L</a></div>
+      <div id="middle-right">
+      	<div id="period"><a>P1</a></div>
+      	<div id="clock"><a>29:45</a></div>
+      </div>
     </div>
     <div id="Team2" class="parallelogramLeft">
-      <span class="TeamScore"><a>175</a></span>
-      <span class="TeamName"><a>CHARM</a></span>
+      <div class="TeamScore"><a>175</a></div>
+      <div class="TeamName"><a>CHARM</a></div>
     </div>
   </div>
 </div>
