--- a/html/views/wftdatv.html
+++ b/html/views/wftdatv.html
@@ -3,7 +3,7 @@
 
 <!--
  Copyright (C) 2008-2012 Mr Temper <MrTemper@CarolinaRollergirls.com>
- Copyright (C) 2013 Rob Thomas <xrobau@gmail.com>
+ Copyright (C) 2013 Damian Georgiou <bachomp@gmail.com>
 
  This file is part of the Carolina Rollergirls (CRG) ScoreBoard.
  The CRG ScoreBoard is licensed under either the GNU General Public
@@ -15,25 +15,81 @@
 
 <script type="text/javascript" src="/javascript/scoreboard.js" ></script>
 
+<link type="text/css" rel="stylesheet" href="wftdatv.css" media="all" />
+<zlink href='http://fonts.googleapis.com/css?family=Oxygen:400,700' rel='stylesheet' type='text/css'>
+
 </head>
 <body>
-<div id="mainDiv">
-  <div id="BottomBar">
-    <div id="Team1" class="parallelogramRight">
-      <span class="TeamName"><a>BREW</a></span>
-      <span class="TeamScore"><a>175</a></span>
-    </div>
-    <div id="status">
-      <span id="jamNumber"><a>J13</a></span>
-      <span id="time"><a>1:04</a></span>
-      <span id="logo"></span>
-      <span id="period"><a>P1</a></span>
-      <span id="clock"><a>29:45</a></span>
-    </div>
-    <div id="Team2" class="parallelogramLeft">
-      <span class="TeamScore"><a>175</a></span>
-      <span class="TeamName"><a>CHARM</a></span>
-    </div>
-  </div>
+	<div id="main-container">
+			<table width="100%" cellpadding="0" cellspacing="0" border="0">
+				<tr>
+					<td valign="bottom" align="right">
+						
+						<div id="team1" class="parallelogram-right">
+							<p id="team1-score-container"> 
+				      	  		<span class="team-name"><a>VICTORIA</a></span>
+				      	  		<span class="team-score"><a>175</a></span>
+				    		</p>
+						</div>
+						
+					</td>
+					<td valign="bottom" align="center" width="370">
+					
+						<div id="status" class="parallelogram-right">
+							<p id="status-left">
+								<span id="jam-number"><a>J13</a></span>
+								<span id="time"><a>1:04</a></span>
+							</p>
+						</div>
+						
+						<img id="logo" src="logo.png" />
+						
+						<div id="status" class="parallelogram-left">
+							<p id="status-right">
+								<span id="period"><a>P1</a></span>
+								<span id="clock"><a>29:45</a></span>
+							</p>
+						</div>
+				
+					</td>
+					<td valign="bottom" align="left" height="100%">
+						
+						<div id="team2" class="parallelogram-left">
+							<p id="team2-score-container">
+								<span class="team-score"><a>175</a></span>
+								<span class="team-name"><a>ROSE CITY</a></span>
+							</p>
+						</div>
+						
+					</td>
+				</tr>
+				<tr>
+					<td height="20" valign="top" align="right">
+						<div id="timeouts-left">
+							<div id="trapezoid-1"></div>
+							<div id="trapezoid-2"></div>
+							<div id="trapezoid-1"></div>
+							<div id="parallelogram-or-left"></div>
+							<div id="parallelogram-lead-left"><p>LEAD</p></div>		
+						</div>
+					</td>
+					<td></td>
+					<td valign="top" align="left">
+						<div id="timeouts-right">			
+							<div id="parallelogram-lead-right"><p>LEAD</p></div>	
+							<div id="parallelogram-or-right"></div>
+							<div id="trapezoid-1"></div>
+							<div id="trapezoid-2"></div>
+							<div id="trapezoid-1"></div>
+						</div>
+					</td>
+				</tr>
+			</table>
+		</td>
+	</tr>
+</table>
+	
+
 </div>
 </body>
+</html>
