Remove old CSS Classes, fix text to fit properly.

--- a/html/views/wo.html
+++ b/html/views/wo.html
@@ -61,12 +61,12 @@
   </div>
  
   <div id="BottomBar">
-    <div id="Team1TimeOuts" class="TimeOuts circle redBorder"><a></a></div>
+    <div id="Team1TimeOuts" class="TimeOuts"><a></a></div>
     <div id="Team1Name" class="noBack" ><a class="Name"></a><a class="AlternateName"></a></div>
     <div id="Team1Score" class="noBack" ><a></a></div>
     <div id="Team2Name" class="noBack" ><a class="Name"></a><a class="AlternateName"></a></div>
     <div id="Team2Score" class="noBack" ><a></a></div>
-    <div id="Team2TimeOuts" class="TimeOuts circle redBorder"><a></a></div>
+    <div id="Team2TimeOuts" class="TimeOuts"><a></a></div>
   </div>
 
 </div>
