--- a/html/views/wo.css
+++ b/html/views/wo.css
@@ -18,18 +18,21 @@ body { background-color: #0f0; }
 img { position: absolute; }
 div { position: absolute; }
 
-#WftdaMain { position: absolute; visibility: visible; width: 100% ; height: 100% ; left: 0px; top: 0px; z-index:155; } 
-#WftdaT1LD { position: absolute; visibility: visible; width: 100% ; height: 100% ; left: 0px; top: 0px; z-index:150; } 
-#WftdaT1OR { position: absolute; visibility: visible; width: 100% ; height: 100% ; left: 0px; top: 0px; z-index:145; } 
-#WftdaT1T1 { position: absolute; visibility: visible; width: 100% ; height: 100% ; left: 0px; top: 0px; z-index:140; } 
-#WftdaT1T2 { position: absolute; visibility: visible; width: 100% ; height: 100% ; left: 0px; top: 0px; z-index:135; } 
-#WftdaT1T3 { position: absolute; visibility: visible; width: 100% ; height: 100% ; left: 0px; top: 0px; z-index:130; } 
-#WftdaT2LD { position: absolute; visibility: visible; width: 100% ; height: 100% ; left: 0px; top: 0px; z-index:125; } 
-#WftdaT2OR { position: absolute; visibility: visible; width: 100% ; height: 100% ; left: 0px; top: 0px; z-index:120; } 
-#WftdaT2T1 { position: absolute; visibility: visible; width: 100% ; height: 100% ; left: 0px; top: 0px; z-index:115; } 
-#WftdaT2T2 { position: absolute; visibility: visible; width: 100% ; height: 100% ; left: 0px; top: 0px; z-index:110; } 
-#WftdaT2T3 { position: absolute; visibility: visible; width: 100% ; height: 100% ; left: 0px; top: 0px; z-index:105; } 
-#WftdaInfo { position: absolute; visibility: visible; width: 100% ; height: 100% ; left: 0px; top: 0px; z-index:100; } 
+#WftdaInfo { position: absolute; visibility: visible; width: 100% ; height: 100% ; left: 0px; top: 0px; z-index:100; }
+#WftdaMain { position: absolute; visibility: visible; width: 100% ; height: 100% ; left: 0px; top: 0px; z-index:110; } 
+
+/* These probably DON'T need to be on seperate z-indexes.. But if they want to change the logos, they may. */ 
+#WftdaT1LD { position: absolute; visibility: visible; width: 100% ; height: 100% ; left: 0px; top: 0px; z-index:210; } 
+#WftdaT1OR { position: absolute; visibility: visible; width: 100% ; height: 100% ; left: 0px; top: 0px; z-index:200; } 
+#WftdaT1T1 { position: absolute; visibility: visible; width: 100% ; height: 100% ; left: 0px; top: 0px; z-index:190; } 
+#WftdaT1T2 { position: absolute; visibility: visible; width: 100% ; height: 100% ; left: 0px; top: 0px; z-index:180; } 
+#WftdaT1T3 { position: absolute; visibility: visible; width: 100% ; height: 100% ; left: 0px; top: 0px; z-index:170; } 
+#WftdaT2LD { position: absolute; visibility: visible; width: 100% ; height: 100% ; left: 0px; top: 0px; z-index:160; } 
+#WftdaT2OR { position: absolute; visibility: visible; width: 100% ; height: 100% ; left: 0px; top: 0px; z-index:150; } 
+#WftdaT2T1 { position: absolute; visibility: visible; width: 100% ; height: 100% ; left: 0px; top: 0px; z-index:140; } 
+#WftdaT2T2 { position: absolute; visibility: visible; width: 100% ; height: 100% ; left: 0px; top: 0px; z-index:130; } 
+#WftdaT2T3 { position: absolute; visibility: visible; width: 100% ; height: 100% ; left: 0px; top: 0px; z-index:120; } 
+ 
 
 
 #mainDiv { width: 100% !important; height: 100% !important; left: 0% !important; } */
