--- a/html/views/wo.html
+++ b/html/views/wo.html
@@ -18,18 +18,19 @@
 
 <body>
 <div id="mainDiv">
-<div id="WftdaMain"><img src=/images/wo/wftda_overlay_main.png WIDTH=100% HEIGHT=100%></div>
-<div id="WftdaInfo"><img src=/images/wo/wftda_overlay_info.png WIDTH=100% HEIGHT=100%></div>
-<div id="WftdaT1LD"><img src=/images/wo/wftda_overlay_t1_lead.png WIDTH=100% HEIGHT=100%></div>
-<div id="WftdaT1OR"><img src=/images/wo/wftda_overlay_t1_or.png WIDTH=100% HEIGHT=100%></div>
-<div id="WftdaT1T1"><img src=/images/wo/wftda_overlay_t1_to1.png WIDTH=100% HEIGHT=100%></div>
-<div id="WftdaT1T2"><img src=/images/wo/wftda_overlay_t1_to2.png WIDTH=100% HEIGHT=100%></div>
-<div id="WftdaT1T3"><img src=/images/wo/wftda_overlay_t1_to3.png WIDTH=100% HEIGHT=100%></div>
-<div id="WftdaT2LD"><img src=/images/wo/wftda_overlay_t2_lead.png WIDTH=100% HEIGHT=100%></div>
-<div id="WftdaT2OR"><img src=/images/wo/wftda_overlay_t2_or.png WIDTH=100% HEIGHT=100%></div>
-<div id="WftdaT2T1"><img src=/images/wo/wftda_overlay_t2_to1.png WIDTH=100% HEIGHT=100%></div>
-<div id="WftdaT2T2"><img src=/images/wo/wftda_overlay_t2_to2.png WIDTH=100% HEIGHT=100%></div>
-<div id="WftdaT2T3"><img src=/images/wo/wftda_overlay_t2_to3.png WIDTH=100% HEIGHT=100%></div>
+  <div id="WftdaMain" class="Full"><img class="Full" src="/images/wo/wftda_overlay_main.png"/></div>
+  <div id="WftdaInfo" class="Full"><img class="Full" src="/images/wo/wftda_overlay_info.png"/></div>
+  <div id="WftdaT1LD" class="Full"><img class="Full" src="/images/wo/wftda_overlay_t1_lead.png"/></div>
+  <div id="WftdaT1OR" class="Full"><img class="Full" src="/images/wo/wftda_overlay_t1_or.png"/></div>
+  <div id="WftdaT1T1" class="Full"><img class="Full" src="/images/wo/wftda_overlay_t1_to1.png"/></div>
+  <div id="WftdaT1T2" class="Full"><img class="Full" src="/images/wo/wftda_overlay_t1_to2.png"/></div>
+  <div id="WftdaT1T3" class="Full"><img class="Full" src="/images/wo/wftda_overlay_t1_to3.png"/></div>
+  <div id="WftdaT2LD" class="Full"><img class="Full" src="/images/wo/wftda_overlay_t2_lead.png"/></div>
+  <div id="WftdaT2OR" class="Full"><img class="Full" src="/images/wo/wftda_overlay_t2_or.png"/></div>
+  <div id="WftdaT2T1" class="Full"><img class="Full" src="/images/wo/wftda_overlay_t2_to1.png"/></div>
+  <div id="WftdaT2T2" class="Full"><img class="Full" src="/images/wo/wftda_overlay_t2_to2.png"/></div>
+  <div id="WftdaT2T3" class="Full"><img class="Full" src="/images/wo/wftda_overlay_t2_to3.png"/></div>
+
   <div id="StatusBar" class="noBack"><a></a></div>
   <div id="TopBar">
     <div id="ClockPeriodNumber" class="noBack">
